Fixed compilation errors by updating AuctionListener constructor and adding chat bidding methods to AfroAuction; Added missing imports for listeners in AfroAuction.java and implemented getAuctionByChest in AuctionManager.java; Fixed ChatBidListener constructor call, updated GUIs to handle List<Auction> instead of Map<Location, Auction>